Rename to remove Consul from component name

--- a/ui-v2/app/components/service-list/index.hbs
+++ b/ui-v2/app/components/service-list/index.hbs
@@ -1,6 +1,6 @@
 {{yield}}
 {{#if (gt items.length 0)}}
-  <ul class="consul-service-list">
+  <ul class="service-list">
     {{#each items as |item|}}
     <li>
       <a href={{href-to routeName item.Name}}>
