--- a/ui-v2/app/styles/components/service-list/layout.scss
+++ b/ui-v2/app/styles/components/service-list/layout.scss
@@ -1,4 +1,4 @@
-%consul-service-list > li {
+%service-list > li {
   padding-top: 8px;
   padding-bottom: 8px;
   border-top: 1px solid;
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 }
 
-%consul-service-list-intent {
+%service-list-intent {
   margin-left: -12px;
   margin-right: -12px;
   margin-bottom: -1px;
@@ -20,6 +20,6 @@
   position: relative;
 }
 
-%consul-service-list-detail {
+%service-list-detail {
   display: flex;
 }
