--- a/ui-v2/app/templates/dc/services/index.hbs
+++ b/ui-v2/app/templates/dc/services/index.hbs
@@ -17,7 +17,7 @@
     <BlockSlot @name="content">
         <ChangeableSet @dispatcher={{searchable}}>
           <BlockSlot @name="set" as |filtered|>
-            <ConsulServiceList @routeName="dc.services.show" @items={{filtered}} @withProxies={{withProxies}}>
+            <ServiceList @routeName="dc.services.show" @items={{filtered}} @withProxies={{withProxies}}>
               <BlockSlot @name="metadata" as |item|>
                 <ul>
                   <li>{{format-number item.InstanceCount}} {{pluralize item.InstanceCount 'Instance' without-count=true}}</li>
@@ -25,7 +25,7 @@
                   <li class="tags">{{item.Tags}}</li>
                 </ul>
               </BlockSlot>
-            </ConsulServiceList>
+            </ServiceList>
           </BlockSlot>
           <BlockSlot @name="empty">
             <p>
