--- a/ui-v2/app/styles/components/index.scss
+++ b/ui-v2/app/styles/components/index.scss
@@ -29,7 +29,7 @@
 @import './tabular-details';
 @import './tabular-collection';
 @import './list-collection';
-@import './consul-service-list';
+@import './service-list';
 
 /**/
 
