--- a/ui-v2/app/styles/base/components/buttons/layout.scss
+++ b/ui-v2/app/styles/base/components/buttons/layout.scss
@@ -48,3 +48,28 @@
   display: inline-block;
   box-sizing: border-box;
 }
+%split-button {
+  @extend %secondary-button;
+  padding: 0 8px !important;
+  position: relative;
+  height: 100%;
+}
+%split-button span::after {
+  @extend %as-pseudo;
+  position: absolute;
+  background-color: $gray-300;
+  width: 1px;
+  top: 0;
+  height: 103%;
+  margin-left: 8px;
+}
+%split-button::before {
+  @extend %as-pseudo;
+  height: 16px;
+}
+%sort-button::before {
+  @extend %with-sort-icon;
+  margin-top: 8px;
+  width: 16px;
+  height: 16px;
+}
