--- a/ui-v2/app/components/popover-select/index.hbs
+++ b/ui-v2/app/components/popover-select/index.hbs
@@ -1,17 +1,19 @@
-<PopoverMenu @keyboardAccess={{false}}>
-  <BlockSlot @name="trigger">
-    <span>
-      {{selected.value}}
-    </span>
-  </BlockSlot>
-  <BlockSlot @name="menu" as |confirm send keypressClick|>
-    <li role="separator">
-      {{title}}
-    </li>
-    {{#each options as |option| }}
-    <li role="none" class={{if (eq selected option) 'is-active'}}>
-      <button tabindex="-1" role="menuitem" type="button" value={{option.key}} onclick={{action 'change' option}}>{{option.value}}</button>
-    </li>
+<div class="popover-select" ...attributes>
+  <PopoverMenu @keyboardAccess={{false}}>
+    <BlockSlot @name="trigger">
+      <span>
+        {{selected.value}}
+      </span>
+    </BlockSlot>
+    <BlockSlot @name="menu">
+      <li role="separator">
+        {{title}}
+      </li>
+    {{#each options as |option|}}
+      <li role="none" class={{if (eq selected.key option.key) 'is-active'}}>
+        <button tabindex="-1" role="menuitem" type="button" value={{option.key}} onclick={{action 'change' option}}>{{option.value}}</button>
+      </li>
     {{/each}}
-  </BlockSlot>
-</PopoverMenu>
+    </BlockSlot>
+  </PopoverMenu>
+</div>
